# semantic_id_recommender

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  config.sample.yaml  instructions.md  main.py  pyproject.toml  setup.sh  specs.md  test_pickle_issue.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
data/: ag_news_500.jsonl
notebooks/: rqvae_config.yaml  stage1_config.yaml  stage2_config.yaml  test_training.ipynb  train_llm.ipynb  train_rqvae.ipynb
scripts/: deploy.py  download_artifacts.py  finetune_llm.py  train_llm.py  train_rqvae.py  upload_artifacts.py
src/: __init__.py
src/config/: __init__.py  default.yaml
src/frontend/: app.py
src/inference/: __init__.py  constants.py  modal_app.py
src/llm/: __init__.py  callbacks.py  data.py  finetune.py  inference.py
src/rqvae/: __init__.py  dataset.py  hub.py  model.py  trainer.py
tests/: test_llm.py  test_rqvae.py
