[project]
name = "semantic-id-recommender"
version = "0.1.0"
description = "LLM-based recommender using RQ-VAE semantic IDs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.1",
    "transformers>=4.57.3",
    "datasets>=2.16.0",
    "wandb>=0.21.0,<0.23.1",  # 0.23.1 has artifact upload bug
    "einops>=0.7.0",
    "omegaconf>=2.3.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    "accelerate>=0.25.0",
    "unsloth>=2025.12.5",
    "lightning>=2.0.0",
    "rich>=13.0.0",
    "x-transformers>=2.11.24",
    "vector-quantize-pytorch>=1.27.15",
    "sentence-transformers>=2.2.0",
    "modal>=0.60.0",
    "gradio>=4.0.0",
    "pydantic>=2.0.0",
    "pytest>=9.0.2",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
inference = [
    "vllm>=0.6.0",
    "outlines>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
train-rqvae = "scripts.train_rqvae:main"
train-llm = "scripts.train_llm:main"
finetune-llm = "scripts.finetune_llm:main"  # Deprecated, use train-llm

[dependency-groups]
dev = [
    "jupyterlab>=4.5.1",
    "nbstripout>=0.8.1",
]
